# ComputerVisionProject

./: CMakeLists.txt  README.md
models/svm/: model.xml  model_test.xml
models/vocabulary/: vocabulary.yml  vocabulary_test.yml
src/: feature_extraction.h  main.cpp  object_recognition.h
